corrected a small mistake in the report API. added more uniformity. corrected some grammar.

--- a/RESTfulAPI/pttapi.yaml
+++ b/RESTfulAPI/pttapi.yaml
@@ -18,10 +18,9 @@ paths:
     post:
       tags:
         - admin
-      summary: Add a new user
+      summary: "Add a new user"
       description: >-
-        The service will add a new user and also return the user added, in JSON
-        format.
+        The service will add a new user and return the new user.
       consumes:
         - application/json
       produces:
@@ -29,10 +28,10 @@ paths:
       parameters:
         - name: body
           in: body
-          description: User object that needs to be added to the addressbook.
+          description: 'User body'
           required: true
           schema:
-            $ref: '#/definitions/UserCreateBody'
+            $ref: '#/definitions/User'
       responses:
         '201':
           description: Success
@@ -40,19 +39,21 @@ paths:
             $ref: '#/definitions/User'
         '400':
           description: Invalid input
+        '409':
+          description: User already exists
   
   '/api/admin/{email}':
     parameters:
       - name: email
         in: path
-        description: email of the user that needs to be updated
+        description: 'email of the user that needs to be accessed'
         required: true
         type: string
     put:
       tags:
         - admin
-      summary: Update an existing user by email
-      description: The service will update a user and return the updated user
+      summary: 'Update an existing user by email'
+      description: 'The service will update a user and return the updated user'
       consumes:
         - application/json
       produces:
@@ -60,7 +61,7 @@ paths:
       parameters:
         - name: body
           in: body
-          description: Updated user
+          description: 'Update to the user'
           required: true
           schema:
             $ref: '#/definitions/UserUpdateBody'
@@ -76,8 +77,8 @@ paths:
     delete:
       tags:
         - admin
-      summary: Delete an existing user by email
-      description: The service will delete a user and return the deleted user
+      summary: 'Delete an existing user by email'
+      description: 'The service will delete a user and return the deleted user'
       responses:
         '200':
           description: Success
@@ -90,20 +91,20 @@ paths:
         '404':
           description: Not found
   
-  
-  
   '/api/user/project/login/{email}':
     parameters:
       - name: email
         in: path
-        description: email of the user that needs to be verified if exists in the database
+        description: 'email of the user that needs to be verified if exists in the database'
         required: true
         type: string
     get:
       tags:
         - user
       summary: Verify if a user with this email exists in the system
-      description: The service will return a boolean indicating whether a user with this email exists in the system or not
+      description: >-
+        The service will return a boolean indicating whether a user with this
+        email exists in the system or not
       produces:
         - application/json
       responses:
@@ -118,14 +119,14 @@ paths:
     parameters:
       - name: email
         in: path
-        description: email of the user that needs to be updated
+        description: 'email of the user that needs to be updated'
         required: true
         type: string
     get:
       tags:
         - user
-      summary: Get the list of projects of a user
-      description: The service will return the list of projects of a user
+      summary: 'Get the list of projects of a user'
+      description: 'The service will return the list of projects of a user'
       produces:
         - application/json
       responses:
@@ -140,6 +141,37 @@ paths:
         '404':
           description: Not found
   
+  '/api/user/project/{email}/{projectName}':
+    parameters:
+      - name: email
+        in: path
+        description: email of the user
+        required: true
+        type: string
+      - name: projectName
+        in: path
+        description: "name of the user's project for which session info needs to be returned"
+        required: true
+        type: string
+    get:
+      tags:
+        - user
+      summary: "Get the sessions of a project of a user"
+      description: "The service will return the list of sessions of the given project of a user"
+      produces:
+        - application/json
+      responses:
+        '200':
+          description: Success
+          schema:
+            type: array
+            items:
+              $ref: '#/definitions/Session'
+        '400':
+          description: Invalid input
+        '404':
+          description: Not found
+  
   '/api/user/project/create/{email}/{projectName}':
     parameters:
       - name: email
@@ -149,14 +181,14 @@ paths:
         type: string
       - name: projectName
         in: path
-        description: name of the user's project that needs to be created
+        description: "name of the user's project that needs to be created"
         required: true
         type: string
     post:
       tags:
         - user
-      summary: Create a user's project
-      description: The service will create a new project for a user and return it.
+      summary: "Create a user's project"
+      description: "The service will create a new project for a user and return it."
       consumes:
         - application/json
       produces:
@@ -168,23 +200,25 @@ paths:
             $ref: '#/definitions/Project'
         '400':
           description: Invalid input
+        '409':
+          description: Project already exists
   
   '/api/user/project/delete/{email}/{projectName}':
     parameters:
       - name: email
         in: path
-        description: email of the user
+        description: "email of the user"
         required: true
         type: string
       - name: projectName
         in: path
-        description: name of the user's project that needs to be deleted
+        description: "name of the user's project that needs to be deleted"
         required: true
         type: string
     delete:
       tags:
         - user
-      summary: Delete a user's project
+      summary: "Delete a user's project"
       description: >-
         The service will delete a project for a user and return the deleted
         project.
@@ -206,18 +240,18 @@ paths:
     parameters:
       - name: email
         in: path
-        description: email of the user
+        description: "email of the user"
         required: true
         type: string
       - name: projectName
         in: path
-        description: name of the user's project that needs to be updated
+        description: "name of the user's project that needs to be updated"
         required: true
         type: string
     put:
       tags:
         - user
-      summary: Associate a Pomodoro with a user’s project
+      summary: "Associate a Pomodoro with a user’s project"
       description: >-
         The service will associate a Pomodoro with user's project, and start a
         new session.
@@ -239,18 +273,18 @@ paths:
     parameters:
       - name: email
         in: path
-        description: email of the user
+        description: "email of the user"
         required: true
         type: string
       - name: projectName
         in: path
-        description: name of the user's project that needs to be updated
+        description: "name of the user's project that needs to be updated"
         required: true
         type: string
     put:
       tags:
         - user
-      summary: Increment the Pomodoro counter for a user's project
+      summary: "Increment the Pomodoro counter for a user's project"
       description: >-
         The service will increment the Pomodoro counter by one for the latest
         session of the user's project.
@@ -272,18 +306,18 @@ paths:
     parameters:
       - name: email
         in: path
-        description: email of the user
+        description: "email of the user"
         required: true
         type: string
       - name: projectName
         in: path
-        description: name of the user's project who session needs to be updated
+        description: "name of the user's project who session needs to be updated"
         required: true
         type: string
     put:
       tags:
         - user
-      summary: Completing a session of the user's project
+      summary: "Completing a session of the user's project"
       description: >-
         The service will update the current session which the user is working
         on.
@@ -302,34 +336,37 @@ paths:
           description: Not found
   
   '/api/user/project/stop/{email}/{projectName}':
-    parameters: 
+    parameters:
       - name: email
         in: path
-        description: email of the user
+        description: "email of the user"
         required: true
         type: string
       - name: projectName
         in: path
-        description: name of the user's project who session needs to be updated
+        description: "name of the user's project who session needs to be updated"
         required: true
         type: string
     put:
       tags:
         - user
-      summary: Stopping a pomodoro for a user’s project
+      summary: "Stopping a pomodoro for a user’s project"
       description: >-
         The service will stop the ongoing session, and log the number of
-        Pomodoros completed in the session and the end time of the last Pomodoro.
+        Pomodoros completed in the session and the end time of the last
+        Pomodoro.
       parameters:
         - name: body
           in: body
-          description: If true, the end time of the last Pomodoro is logged. Otherwise, the end time of the last completed Pomodoro is logged.
+          description: >-
+            If true, the end time of the last Pomodoro is logged. Otherwise, the
+            end time of the last completed Pomodoro is logged.
           required: true
           schema:
             $ref: '#/definitions/Boolean'
-      consumes: 
+      consumes:
         - application/json
-      produces: 
+      produces:
         - application/json
       responses:
         '200':
@@ -341,41 +378,45 @@ paths:
         '404':
           description: Not found
   
-  '/api/user/project/report/{email}/{projectName}':
-    parameters: 
+  '/api/user/project/report/{email}/{projectName}/':
+    parameters:
       - name: email
         in: path
-        description: email of the user
+        description: "email of the user"
         required: true
         type: string
+      
       - name: projectName
         in: path
-        description: name of the user's project for which the report needs to be
-          generated
+        description: "name of the user's project for which the report needs to be generated"
         required: true
         type: string
+      
       - name: startTime
         in: query
-        description: start time of the timeframe for which the report needs to be generated
+        description: "start time of the timeframe for which the report needs to be generated"
         required: true
         type: string
+      
       - name: endTime
         in: query
-        description: end time of the timeframe for which the report needs to be generated
+        description: "end time of the timeframe for which the report needs to be generated"
         required: true
         type: string
-      - name: addInfo
+      
+      - name: options
         in: query
-        description: if true, the number of Pomodoros completed in the timeframe and the total number of hours worked on the project are also returned
+        description: "additional options or constraints"
         required: false
-        type: boolean
+        type: string
     get:
       tags:
         - user
-      summary: Generating a report for a user's project for a specific timeframe
+      summary: "Generating a report for a user's project for a specific timeframe"
       description: >-
-        The service will generate a report for a user's project for a specified timeframe. The report will show, for each session logged for the selected project and timeframe, (1) starting and ending times and (2) time worked. Optionally, the report will also show the number of Pomodoros completed in the timeframe and the total number of hours worked on the project.
-      consumes: 
+        The service will return all the sessions for a user's project in a specific
+        timeframe and with respect to any options.
+      consumes:
         - application/json
       produces:
         - application/json
@@ -388,26 +429,9 @@ paths:
           description: Invalid input
         '404':
           description: Not found
-      
+
 definitions:
   User:
-    type: object
-    required:
-      - firstname
-      - lastname
-      - email
-    properties:
-      firstname:
-        type: string
-      lastname:
-        type: string
-      email:
-        type: string
-      projects:
-        type: array
-        items:
-          $ref: '#/definitions/Project'
-  UserCreateBody:
     type: object
     required:
       - firstname
@@ -438,7 +462,7 @@ definitions:
           $ref: '#/definitions/Session'
   Report:
     type: object
-    required: 
+    required:
       - sessions
     properties:
       sessions:
@@ -463,10 +487,10 @@ definitions:
     properties:
       partial:
         type: boolean
-    
   LoginResponse:
     type: object
     properties:
       exists:
         type: boolean
-    
+
+
