removed backend4, modified backend2 and .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -5,5 +5,8 @@ bin/
 .vscode/
 .gradle/
 .project
+.classpath
+.settings/
+
 PTTBackend2/.classpath
 PTTBackend2/.settings/org.eclipse.buildship.core.prefs
