--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,5 @@ bin/
 .project
 PTTBackend2/.classpath
 PTTBackend2/.settings/org.eclipse.buildship.core.prefs
+.classpath
+.settings/org.eclipse.buildship.core.prefs
